--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,21 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
     "axios": "^1.12.2",
-    "expo": "~54.0.12",
-    "expo-av": "^16.0.7",
+    "expo": "^54.0.13",
     "expo-camera": "^17.0.8",
     "expo-image-picker": "^17.0.8",
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "^3.0.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.1.2",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
